2002-06-06  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c, src/gerb_image.h, src/gerber.c: Added counting and
	  storing of number of corners in polygons, so drawing of polygons
	  can use dynamically allocated memory. Hard coded array size gave
	  horrible result with submitted file from David Cussans with a lot
	  of corners in the polygons.


2002-06-05  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Added check to autoscale so scale don't screw up
	  everything.
	

2002-06-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.h, src/gerber.c: Thanks to Stephen Adam I now know
	  what %IC??*% means (Input Code) and have added it to the parser.
	

2002-05-18  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, acconfig.h, src/Makefile.am, src/gerbv.c,
	  src/gerbv_screen.h, src/exportimage.[hc], CONTRIBUTORS: 
	  Added "export image to PNG" contributed by Dino Ghilardi.
	  Thanks! Currently not default, use --enable-exportpng when
	  running configure.
	

2002-05-17  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c, src/gerbv_screen.h: Split out the global
	  screen variable and it's struct to simplify future 
	  split of gerbv.c.

	* acconfig.h, configure.in, src/gerbv.c, scm_gerber.c:
	  Prepared phase out of Guile by changing default to exclude
	  Guile inclusion.Change flag disable-batch to enable-batch 
	  during configure and changing the variable NO_GUILE to 
	  GUILE_IN_USE.

	
2002-05-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.*, src/gerber.*, src/gerbv.c: Moved verify_gerb
	  to gerb_image and renamed it to gerb_image_verify so drill file
	  parsing and gerber file parsing could split them. Done after 
	  receiveing Excellon file without drillfile sizes (Innoveda/PADS
	  Power PCB) from Dino Ghilardi.
	* src/gerb_file.c: Improved error reporting.
	

2002-05-08  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (zoom_outline): Prevent division by zero by