@@ -683,10 +683,10 @@ zoom_outline(GtkWidget *widget, GdkEventButton *event)
     half_w = screen.drawing_area->allocation.width / 2;
     half_h = screen.drawing_area->allocation.height / 2;
 
-    x1 = MIN(screen.zstart_x, event->x);
-    y1 = MIN(screen.zstart_y, event->y);
-    x2 = MAX(screen.zstart_x, event->x);
-    y2 = MAX(screen.zstart_y, event->y);
+    x1 = MIN(screen.start_x, event->x);
+    y1 = MIN(screen.start_y, event->y);
+    x2 = MAX(screen.start_x, event->x);
+    y2 = MAX(screen.start_y, event->y);
 
     if (x2 - x1 < 4 && y2 - y1 < 4) {
 	    fprintf(stderr, "Warning: Zoom area too small, bailing out!\n");
@@ -956,9 +956,16 @@ button_press_event (GtkWidget *widget, GdkEventButton *event)
 
     switch (event->button) {
     case 1 :
-	screen.state = MOVE;
-	screen.last_x = widget->allocation.height - event->x;
-	screen.last_y = widget->allocation.width  - event->y;
+	if((event->state & GDK_SHIFT_MASK) == 0) {
+	    /* Plain panning */
+	    screen.state = MOVE;
+	    screen.last_x = widget->allocation.height - event->x;
+	    screen.last_y = widget->allocation.width  - event->y;
+	} else /* XXX Add some modifier selection criteria */ {
+	    screen.state = MEASURE;
+	    screen.start_x = event->x;
+	    screen.start_y = event->y;
+	}
 	break;
     case 2 :
 	/* And now, some Veribest-like mouse commands for
@@ -975,8 +982,8 @@ button_press_event (GtkWidget *widget, GdkEventButton *event)
     case 3 :
 	/* Zoom outline mode initiated */
 	screen.state = ZOOM_OUTLINE;
-	screen.zstart_x = event->x;
-	screen.zstart_y = event->y;
+	screen.start_x = event->x;
+	screen.start_y = event->y;
 	break;
     case 4 :
 	data.z_dir = ZOOM_IN_CMOUSE;
@@ -1066,6 +1073,20 @@ motion_notify_event (GtkWidget *widget, GdkEventMotion *event)
 	    gtk_widget_draw(widget, &update_rect);
 	    break;
 	}
+	case MEASURE: {
+	    screen.last_x = x;
+	    screen.last_y = y;
+
+	    update_rect.x = 0, update_rect.y = 0;
+	    update_rect.width  = widget->allocation.width;
+	    update_rect.height = widget->allocation.height;
+	
+	    /*
+	     * Calls expose_event
+	     */
+	    gtk_widget_draw(widget, &update_rect);
+	    break;
+	}
 	default:
 	    break;
 	}
@@ -1138,14 +1159,51 @@ expose_event (GtkWidget *widget, GdkEventExpose *event)
 	    values_mask = GDK_GC_FUNCTION | GDK_GC_FOREGROUND;
 	    gc = gdk_gc_new_with_values(screen.drawing_area->window, &values, values_mask);
 
-	    x1 = MIN(screen.zstart_x, screen.last_x);
-	    y1 = MIN(screen.zstart_y, screen.last_y);
-	    x2 = MAX(screen.zstart_x, screen.last_x);
-	    y2 = MAX(screen.zstart_y, screen.last_y);
+	    x1 = MIN(screen.start_x, screen.last_x);
+	    y1 = MIN(screen.start_y, screen.last_y);
+	    x2 = MAX(screen.start_x, screen.last_x);
+	    y2 = MAX(screen.start_y, screen.last_y);
 
-	    gdk_draw_rectangle(screen.drawing_area->window, gc, FALSE, x1, y1, x2-x1, y2-y1);	    
+	    gdk_draw_rectangle(screen.drawing_area->window, gc, FALSE, x1, y1, x2-x1, y2-y1);
+    } else if (screen.state == MEASURE) {
+	GdkGC *gc;
+	GdkGCValues values;
+	GdkGCValuesMask values_mask;
+	gint x1, y1, x2, y2;
+	GdkFont *font;
+	const char *fontname = "-*-helvetica-bold-r-normal--*-120-*-*-*-*-iso8859-1";
+
+	memset(&values, 0, sizeof(values));
+	values.function = GDK_XOR;
+	values.foreground = *screen.zoom_outline_color;
+	values_mask = GDK_GC_FUNCTION | GDK_GC_FOREGROUND;
+	gc = gdk_gc_new_with_values(screen.drawing_area->window, &values, values_mask);
+	font = gdk_font_load(fontname);
+
+	x1 = MIN(screen.start_x, screen.last_x);
+	y1 = MIN(screen.start_y, screen.last_y);
+	x2 = MAX(screen.start_x, screen.last_x);
+	y2 = MAX(screen.start_y, screen.last_y);
+
+	gdk_draw_line(screen.drawing_area->window, gc, screen.start_x, screen.start_y, screen.last_x, screen.last_y);
+	if (font == NULL) {
+	    fprintf(stderr, "Failed to load font '%s'\n", fontname);
+	} else {
+	    gchar string[65];
+	    double delta, dx, dy;
+
+	    dx = (x2 - x1)/(double) screen.scale;
+	    dy = (y2 - y1)/(double) screen.scale;
+	    delta = sqrt(dx*dx + dy*dy); /* Pythagoras */
+	    sprintf(string, "[dist %.3g\", dX %.3g\", dY %.3g\"]", delta, dx, dy);
+
+	    gdk_draw_string(screen.drawing_area->window, font, gc, (x1+x2)/2, (y1+y2)/2, string);
+
+	    sprintf(string, "[dist %.3gcm, dX %.3gcm, dY %.3gcm]", delta*2.54, dx*2.54, dy*2.54);
+
+	    gdk_draw_string(screen.drawing_area->window, font, gc, (x1+x2)/2, (y1+y2)/2 + 14, string);
+	}
     }
-
     /*
      * Raise popup windows if they happen to disappear
      */
